--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remark-rehype": "^10.1.0",
     "remark-toc": "^8.0.1",
     "remark-unwrap-images": "^3.0.1",
+    "sass": "^1.56.1",
     "typescript": "4.8.4",
     "unified": "^10.1.2"
   },
@@ -42,6 +43,7 @@
     "postcss": "^8.4.18",
     "postcss-nested": "^6.0.0",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.2.2",
+    "typed-scss-modules": "^7.0.1"
   }
 }
