--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
+    "typeRoots" : ["./src/@types"],
     "paths": {
       "@/*": ["./src/*"],
       "@styles/*": ["./src/styles/*"]
