--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -26,6 +30,8 @@
     "rehype-react": "^7.1.1",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
+    "remark-collapse": "^0.1.2",
+    "remark-footnotes": "^4.0.1",
     "remark-parse": "^10.0.1",
     "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
